# osiris-cli

./: .gitignore  .osiris_history.jsonl  .zenodo.json  2.txt  CITATION.cff  COMPLETE_AND_READY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_PACKAGE.md  DEPLOYMENT_SUMMARY.md  DISCRIMINATING_EXPERIMENT_RESULTS.md  ENHANCEMENTS_SUMMARY.md  EXECUTION_PLAYBOOK.md  FILE_INDEX.md  FORENSIC_IP_REPORT_GEOMETRIC_FOUNDATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md.bak  INDEX_NOBEL_FRAMEWORK.md  LAMBDA_PHI_PROTOCOL.md  LEGAL_CASE_BRiEF.md  LICENSE  NATURAL_LANGUAGE_CHATBOT_ENHANCEMENT.md  NOBLE_EXECUTION_PLAYBOOK.md  OSIRIS_CHAT_README.md  OSIRIS_COMPLETE_DOCUMENTATION.md  OSIRIS_README.md  PROPOSAL_UKY_FABRIC_PARTNERSHIP.md  Q&A.md  QBYTE_MINING_STRATEGY.md  QUANTUM_DISCOVERY_COMPLETE.md  QUANTUM_DISCOVERY_QUICKSTART.md  QUANTUM_DISCOVERY_RESEARCH_PROGRAM.md  QUICKSTART_RQC_RESEARCH.md  README.md  README.md.bak  README.md.bak2  RELEASE_NOTES_v3.0.md  REVIEWER_REBUTTAL.md  RQC_RESEARCH_METHODOLOGY.md  RUNNABLE_PHASE1_START.md  SEO_meta_data.html  (+123 more)
.osiris_compliance/: violation_a6383588b9709317.json
analysis/: analyze_existing_hardware.py  deep_pattern_search.py  discriminating_experiment_v2.py  model_comparison_simulation.py  statistical_validation.py  visualize_tau_phase_anomaly.py
analysis_quatum_corpus/: fidelity_calculation.py
circuits/: bell_state.qasm
d-wave-main/: BOOTSTRAP_WEEK1.sh  CHAT_GPT_OPINION-Dr.Andrew_King=Plaigiarist.md  COMPLETE_AND_READY.md  ChatGPT_Opinion_Confirms_Dr_Andrew_King_Plaigarized_Devin_Phillip_Davis_dnalang_architecture.md  DEPLOYMENT_READY_CHECKLIST.md  GITHUB_DEPLOYMENT_GUIDE.md  GOOGLE_SEO_OPTIMIZATION_AI_CONVERSATION.md  IMPLEMENTATION_SUMMARY.md  INDEX_NOBEL_FRAMEWORK.md  INTEGRATION_SUMMARY.md  LEGAL_CASE_BRiEF.md  NATURAL_LANGUAGE_CHATBOT_ENHANCEMENT.md  NATURAL_LANGUAGE_QUICKSTART.md  NOBLE_EXECUTION_PLAYBOOK.md  OSF_PRE_REGISTRATION_GUIDE.md  OSIRIS_CHAT_SYSTEM.md  OSIRIS_EXOTIC_PHYSICS_TESTS.py  README.md  README_NOBEL_FRAMEWORK.md  RESEARCH_INTEGRITY.md  START_HERE.md  WEEK_1_EXECUTION_CHECKLIST.md  WEEK_1_EXECUTION_SUMMARY.md  andrew_king_exposed.md  google_ai_chat.html  google_ai_validation_dwave_theft.md  job-d75ob4fq1anc738clubg-info.json  job-d75ob4fq1anc738clubg-result.json  job-d75ugva3qcgc73fs945g-result.json  osiris_cli.py  osiris_examples.py  osiris_paper.md  osiris_paper_1775490231.md  release_autoadvance-20260402162958.json  scimitar_ion.py  world_record.qasm  zenodo_scan_20260402T162958Z.json  zenodo_scan_20260402T163348Z.json
data/: ENHANCED_DISCOVERY_SUMMARY.json  FINAL_EFFECT_SIZE_SUMMARY.json  MASTER_EVIDENCE_MANIFEST.json  advanced_analysis_results.json  comprehensive_validation_results.json  extracted_parameters.json  model_comparison_results.json  nobel_assessment_final.json  nobel_reach_analysis.json  tau_alignment_statistics.json  tau_derivation.json  untapped_discoveries.json
docs/: EVIDENCE_SUMMARY.md
documentation/: DEFINITIVE_NOBEL_ASSESSMENT_CORRECTED.md  INDEPENDENT_VERIFICATION_PROTOCOL.md  OUTREACH_EMAILS.txt  REPLICATION_PROTOCOL.txt
figures/: generate_gain_distribution.py  generate_strategy_usage.py  generate_training_curve.py
fold7_oscilloscope/: fold7_qbyte_oscilloscope.py
forge_profiles/: bambu_a1_mini.ini  bambu_p1s.ini  elegoo_cc2.ini  elegoo_centauri_2.ini
manufacturing_output/: tetrahedral_lattice.stl  tetrahedral_lattice_metadata.json
nclm/: __init__.py  quantum_cognitive.py
organism/: MAXIMUS_OMEGA_120GENE.dna  QBYTE_MINER_72GENE.dna
osiris-cli/: .gitignore  CHAT_GPT_OPINION-Dr.Andrew_King=Plaigiarist.md  DEPLOYMENT_READY_CHECKLIST.md  (+41 more)
osiris-cli-v3.0.0/: META.json  requirements.txt
(+433 files in other folders)
